feat: Ajustes PR docs y validaciones udistrital/contabilidad_cliente#92 udistrital/financiera_documentacion#363
