# swagger/swagger.yml
@@ -19,22 +19,6 @@ paths:
       operationId: CuentaBancariaBancoController.GetAll
       parameters:
       - in: query
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: sortby
-        description: Sorted-by fields. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: order
-        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
-        type: string
-      - in: query
         name: limit
         description: Limit the size of result set. Must be an integer
         type: string
@@ -46,8 +30,10 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Cuenta_bancaria_banco'
-        "403":
+            type: array
+            items:
+              $ref: '#/definitions/models.Cuenta_bancaria_banco'
+        "400":
           description: ""
   /cuenta_bancaria_banco/{id}:
     get:
@@ -66,7 +52,7 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Cuenta_bancaria_banco'
-        "403":
+        "400":
           description: :id is empty
   /solicitud_avance/:
     get:
